# metube-telegram-proxy-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: __init__.py  main.py  proxy_failover.py  proxy_runtime.py  proxy_state.py  vpn.py  ytdl.py
bot/: config.py  download_executor.py  download_server.py  errors.py  main.py  metube_client.py  models.py  service.py  store.py  telegram_api.py  url_utils.py  worker.py
deploy/systemd/: metube-telegram-bot.service
docs/: session-handoff-2026-03-26.md  session-handoff-2026-03-27.md
docs/superpowers/plans/: 2026-03-25-auto-retry.md  2026-03-25-runtime-hardening.md  2026-03-25-systemd-deployment-support.md  2026-03-25-telegram-bot-mvp.md  2026-03-26-direct-ytdlp-single-container.md  2026-03-26-proxy-failover.md  2026-03-27-multi-user-telegram-access.md  2026-03-27-ytdlp-runtime-parity.md
docs/superpowers/specs/: 2026-03-25-auto-retry-design.md  2026-03-25-runtime-hardening-design.md  2026-03-25-telegram-bot-metube-design.md  2026-03-26-direct-ytdlp-single-container-design.md  2026-03-26-proxy-failover-design.md  2026-03-26-ytdlp-runtime-parity-design.md  2026-03-27-multi-user-telegram-access-design.md
tests/app/: __init__.py  test_proxy_failover.py  test_proxy_runtime.py  test_proxy_state.py  test_vpn.py  test_ytdl_failover.py
tests/bot/: test_config.py  test_deploy_assets.py  test_download_executor.py  test_download_server.py  test_main.py  test_metube_client.py  test_service.py  test_store.py  test_telegram_api.py  test_url_utils.py  test_worker.py
