[project]
name = "metube"
version = "0.1.0"
description = "Single-container Telegram download bot powered by yt-dlp and optional Xray proxy failover"
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "yt-dlp[default,curl-cffi]",
]

[project.scripts]
metube-telegram-bot = "bot.main:main"

[dependency-groups]
dev = [
    "pylint",
]
